[Button] fix label alignment in IE11 when Button is not a child of flex display

--- a/src/Button/Button.css
+++ b/src/Button/Button.css
@@ -70,6 +70,11 @@
   width: 100%;
 }
 
+.isNotFab {
+  padding-top: 11px;
+  padding-bottom: 11px;
+}
+
 .isIcon {
   border-radius: 50%;
 }
